force-app/main/default/objects/CurrentOrdersDelivery__x/CurrentOrdersDelivery__x.object-meta.xml
<CustomObject>
    <description>CurrentOrdersSet</description>
    <externalDataSource>TCP_Deliverydetails</externalDataSource>
    <externalName>CurrentOrdersSet</externalName>
    <label>CurrentOrdersDelivery</label>
    <pluralLabel>CurrentOrdersDelivery</pluralLabel>
</CustomObject>