force-app/main/default/objects/CurrentOrdersDelivery__x/fields/BolDelItemNo__c.field-meta.xml
<CustomField>
    <fullName>BolDelItemNo__c</fullName>
    <description>BolDelItemNo</description>
    <externalDeveloperName>BolDelItemNo</externalDeveloperName>
    <label>BolDelItemNo</label>
    <length>6</length>
    <type>Text</type>
</CustomField>