force-app/main/default/objects/CurrentOrdersDelivery__x/fields/Brtwr__c.field-meta.xml
<CustomField>
    <fullName>Brtwr__c</fullName>
    <description>Brtwr</description>
    <externalDeveloperName>Brtwr</externalDeveloperName>
    <label>Brtwr</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>