force-app/main/default/objects/CurrentOrdersDelivery__x/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <description>Conditions</description>
    <externalDeveloperName>Conditions</externalDeveloperName>
    <label>Conditions</label>
    <length>132</length>
    <type>Text</type>
</CustomField>