force-app/main/default/objects/CurrentOrdersDelivery__x/fields/DeliverOn__c.field-meta.xml
<CustomField>
    <fullName>DeliverOn__c</fullName>
    <description>DeliverOn</description>
    <externalDeveloperName>DeliverOn</externalDeveloperName>
    <label>DeliverOn</label>
    <length>12</length>
    <type>Text</type>
</CustomField>