force-app/main/default/objects/CurrentOrdersDelivery__x/fields/DeliverTo__c.field-meta.xml
<CustomField>
    <fullName>DeliverTo__c</fullName>
    <description>DeliverTo</description>
    <externalDeveloperName>DeliverTo</externalDeveloperName>
    <label>DeliverTo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>