force-app/main/default/objects/CurrentOrdersDelivery__x/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>DueDate</description>
    <externalDeveloperName>DueDate</externalDeveloperName>
    <label>DueDate</label>
    <length>12</length>
    <type>Text</type>
</CustomField>