force-app/main/default/objects/CurrentOrdersDelivery__x/fields/Fkdat__c.field-meta.xml
<CustomField>
    <fullName>Fkdat__c</fullName>
    <description>Fkdat</description>
    <externalDeveloperName>Fkdat</externalDeveloperName>
    <label>Fkdat</label>
    <length>8</length>
    <type>Text</type>
</CustomField>