force-app/main/default/objects/CurrentOrdersDelivery__x/fields/InvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAmount__c</fullName>
    <description>InvoiceAmount</description>
    <externalDeveloperName>InvoiceAmount</externalDeveloperName>
    <label>InvoiceAmount</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>