force-app/main/default/objects/CurrentOrdersDelivery__x/fields/InvoiceItm__c.field-meta.xml
<CustomField>
    <fullName>InvoiceItm__c</fullName>
    <description>InvoiceItm</description>
    <externalDeveloperName>InvoiceItm</externalDeveloperName>
    <label>InvoiceItm</label>
    <length>6</length>
    <type>Text</type>
</CustomField>