force-app/main/default/objects/CurrentOrdersDelivery__x/fields/InvoiceType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceType__c</fullName>
    <description>InvoiceType</description>
    <externalDeveloperName>InvoiceType</externalDeveloperName>
    <label>InvoiceType</label>
    <length>60</length>
    <type>Text</type>
</CustomField>