force-app/main/default/objects/CurrentOrdersDelivery__x/fields/Kunre__c.field-meta.xml
<CustomField>
    <fullName>Kunre__c</fullName>
    <description>Kunre</description>
    <externalDeveloperName>Kunre</externalDeveloperName>
    <label>Kunre</label>
    <length>10</length>
    <type>Text</type>
</CustomField>