force-app/main/default/objects/CurrentOrdersDelivery__x/fields/KunreCity__c.field-meta.xml
<CustomField>
    <fullName>KunreCity__c</fullName>
    <description>KunreCity</description>
    <externalDeveloperName>KunreCity</externalDeveloperName>
    <label>KunreCity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>