force-app/main/default/objects/CurrentOrdersDelivery__x/fields/KunreName__c.field-meta.xml
<CustomField>
    <fullName>KunreName__c</fullName>
    <description>KunreName</description>
    <externalDeveloperName>KunreName</externalDeveloperName>
    <label>KunreName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>