force-app/main/default/objects/CurrentOrdersDelivery__x/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <description>Months</description>
    <externalDeveloperName>Months</externalDeveloperName>
    <label>Months</label>
    <length>2</length>
    <type>Text</type>
</CustomField>