force-app/main/default/objects/CurrentOrdersDelivery__x/fields/Netwr__c.field-meta.xml
<CustomField>
    <fullName>Netwr__c</fullName>
    <description>Netwr</description>
    <externalDeveloperName>Netwr</externalDeveloperName>
    <label>Netwr</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>