force-app/main/default/objects/CurrentOrdersDelivery__x/fields/OrderCreatedOn__c.field-meta.xml
<CustomField>
    <fullName>OrderCreatedOn__c</fullName>
    <description>OrderCreatedOn</description>
    <externalDeveloperName>OrderCreatedOn</externalDeveloperName>
    <label>OrderCreatedOn</label>
    <length>8</length>
    <type>Text</type>
</CustomField>