force-app/main/default/objects/CurrentOrdersDelivery__x/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price</description>
    <externalDeveloperName>Price</externalDeveloperName>
    <label>Price</label>
    <length>132</length>
    <type>Text</type>
</CustomField>