force-app/main/default/objects/CurrentOrdersDelivery__x/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <description>ProductId</description>
    <externalDeveloperName>ProductId</externalDeveloperName>
    <label>ProductId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>