force-app/main/default/objects/CurrentOrdersDelivery__x/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <description>SalesOrder</description>
    <externalDeveloperName>SalesOrder</externalDeveloperName>
    <label>SalesOrder</label>
    <length>10</length>
    <type>Text</type>
</CustomField>