force-app/main/default/objects/CurrentOrdersDelivery__x/fields/ShipDspOn__c.field-meta.xml
<CustomField>
    <fullName>ShipDspOn__c</fullName>
    <description>ShipDspOn</description>
    <externalDeveloperName>ShipDspOn</externalDeveloperName>
    <label>ShipDspOn</label>
    <length>12</length>
    <type>Text</type>
</CustomField>