force-app/main/default/objects/CurrentOrdersDelivery__x/fields/Soldto__c.field-meta.xml
<CustomField>
    <fullName>Soldto__c</fullName>
    <description>Soldto</description>
    <externalDeveloperName>Soldto</externalDeveloperName>
    <label>Soldto</label>
    <length>10</length>
    <type>Text</type>
</CustomField>