force-app/main/default/objects/CurrentOrdersDelivery__x/fields/UnitInv__c.field-meta.xml
<CustomField>
    <fullName>UnitInv__c</fullName>
    <description>UnitInv</description>
    <externalDeveloperName>UnitInv</externalDeveloperName>
    <label>UnitInv</label>
    <length>3</length>
    <type>Text</type>
</CustomField>