force-app/main/default/objects/CurrentOrdersDelivery__x/fields/Weborder__c.field-meta.xml
<CustomField>
    <fullName>Weborder__c</fullName>
    <description>Weborder</description>
    <externalDeveloperName>Weborder</externalDeveloperName>
    <label>Weborder</label>
    <length>12</length>
    <type>Text</type>
</CustomField>